			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.swi.psy.uva.nl/bugzilla/
					--------------------------------------

  * FIXED: peek_code/2 and friends on end-of-file.  Steve Moyle.


VERSION 5.2.10 (Oct 27, 2003)
=============================
	
  * FIXED: call(1) exception handling (not callable).


VERSION 5.2.9 (Oct 05, 2003)
============================
	
  * MANUAL: Fixes to skeleton code for non-deterministic foreign predicates
    (Willem de Bruijn).

  * LINK: pl -dump-runtime-variables to set PLLIB to the link-option to
    link the Prolog library (e.g. -lpl)

  * ADDED: gspy/1 to start the guitracer on a spyed predicate.

  * ADDED: goal_expansion/2 to work on the arguments of catch/3.

  * ENHANCED: more debugger issues.  Still unsatisfactory.

  * FIXED: proper writing of variables in the normal terminal debugger.
    (Marc B).

  * FIXED: absolute_file_name/[3] to return order consistently.

  * ENHANCED: handling of redo in the debugger.

  * FIXED: sub_atom('1', _, _, 3, Sub) (2nd or 3th argument longer than
    atom).  Anjo Anjewierden.

  * FIXED: Prolog flag abort_with_exception to be true in multi-threaded
    version and make it read-only.  `Cosmetic' only.

  * FIXED: Compilation of (a, ! -> b) to cut the choicepoints of a.
    Sergey Tikhonov.

  * ADDED: MS-Windows: library(registry): win_flush_filetypes/0 to forward
    changes to registered types to the shell, so the proper icons are
    displayed.  Also used by the install-script to propagate the Prolog icon
    immediately.

  * FIXED: Source level debugger: ERROR: Arithmetic: `very_deep/0' is
    not a function.  David Reitter.

  * ENHANCED: library(check) only reports redefinition on modules that
    default to user and system (otherwise we are dealing with special
    purpose usage of the module system that must be handled seperately).
